--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,7 @@
 .container > .homeSearch, .container > .homeSearch h1{
     text-align:center;
 }
+
+.specialFont {
+    font-family: CharisSILB;
+}
