--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,10 @@
  font-style : normal;
  src : url('font/CharisSILB.ttf');
 }
-.container > .homeSearch, .container > .homeSearch h1{
+.container > .homeSearch, h1{
     text-align:center;
 }
 
-.specialFont {
+.specialFont, #search-font {
     font-family: CharisSILB;
 }
