Update font to smaller font for faster loading

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
  font-family : CharisSILB;
  font-weight : bold;
  font-style : normal;
- src : url('font/CharisSILB.ttf');
+ src : url('font/CharisSILAfr-B.ttf');
 }
 .container > .homeSearch, h3{
     text-align:center;
